src/snapshots/fern__ir__tests__typed_integers.snap
---
source: src/ir.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [],
                blocks: [
                    Block {
                        instructions: [],
                        terminator: Return {
                            value: None,
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
