src/snapshots/fern__ir__tests__typed_scopes.snap
---
source: src/ir.rs
expression: entry.entry()
---
Entry {
    values: [
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    0,
                ),
            ),
        },
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    0,
                ),
            ),
        },
        Value {
            span: Some(
                96..102,
            ),
            ty: I64,
            kind: Convert {
                operand: Value(
                    ValueId(
                        1,
                    ),
                ),
                truncating: false,
            },
        },
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    1,
                ),
            ),
        },
        Value {
            span: Some(
                108..118,
            ),
            ty: I64,
            kind: Convert {
                operand: Value(
                    ValueId(
                        3,
                    ),
                ),
                truncating: false,
            },
        },
        Value {
            span: None,
            ty: I64,
            kind: Load(
                LocalId(
                    2,
                ),
            ),
        },
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    0,
                ),
            ),
        },
        Value {
            span: Some(
                174..180,
            ),
            ty: Int,
            kind: Convert {
                operand: Value(
                    ValueId(
                        6,
                    ),
                ),
                truncating: false,
            },
        },
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    1,
                ),
            ),
        },
        Value {
            span: Some(
                191..201,
            ),
            ty: Int,
            kind: Convert {
                operand: Value(
                    ValueId(
                        8,
                    ),
                ),
                truncating: false,
            },
        },
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    1,
                ),
            ),
        },
        Value {
            span: None,
            ty: I8,
            kind: Load(
                LocalId(
                    5,
                ),
            ),
        },
        Value {
            span: Some(
                248..259,
            ),
            ty: Int,
            kind: Convert {
                operand: Value(
                    ValueId(
                        11,
                    ),
                ),
                truncating: false,
            },
        },
    ],
    flow: ControlFlow {
        entry: BlockId(
            0,
        ),
        locals: [
            I8,
            I8,
            I64,
            I64,
            Int,
            I8,
        ],
        blocks: [
            Block {
                instructions: [
                    Store {
                        local: LocalId(
                            0,
                        ),
                        operand: Integer {
                            value: 42,
                            ty: I8,
                        },
                    },
                    Value(
                        ValueId(
                            0,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            1,
                        ),
                        operand: Value(
                            ValueId(
                                0,
                            ),
                        ),
                    },
                    Value(
                        ValueId(
                            1,
                        ),
                    ),
                    Value(
                        ValueId(
                            2,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            2,
                        ),
                        operand: Value(
                            ValueId(
                                2,
                            ),
                        ),
                    },
                    Value(
                        ValueId(
                            3,
                        ),
                    ),
                    Value(
                        ValueId(
                            4,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            2,
                        ),
                        operand: Value(
                            ValueId(
                                4,
                            ),
                        ),
                    },
                    Value(
                        ValueId(
                            5,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            3,
                        ),
                        operand: Value(
                            ValueId(
                                5,
                            ),
                        ),
                    },
                    Store {
                        local: LocalId(
                            0,
                        ),
                        operand: Integer {
                            value: 7,
                            ty: I8,
                        },
                    },
                    Value(
                        ValueId(
                            6,
                        ),
                    ),
                    Value(
                        ValueId(
                            7,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            4,
                        ),
                        operand: Value(
                            ValueId(
                                7,
                            ),
                        ),
                    },
                    Value(
                        ValueId(
                            8,
                        ),
                    ),
                    Value(
                        ValueId(
                            9,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            4,
                        ),
                        operand: Value(
                            ValueId(
                                9,
                            ),
                        ),
                    },
                    Value(
                        ValueId(
                            10,
                        ),
                    ),
                    Store {
                        local: LocalId(
                            5,
                        ),
                        operand: Value(
                            ValueId(
                                10,
                            ),
                        ),
                    },
                    Value(
                        ValueId(
                            11,
                        ),
                    ),
                    Value(
                        ValueId(
                            12,
                        ),
                    ),
                ],
                terminator: Exit {
                    status: Value(
                        ValueId(
                            12,
                        ),
                    ),
                },
            },
        ],
    },
}
